# everything-claude-code

./: .gitattributes  .gitignore  README.md  RESEARCH-CLAUDE-CODE-PATTERNS.md  link_all.sh  package-lock.json  pyproject.toml  sync-upstream.sh
.claude/: settings.local.json
.cursor/rules/: typescript-patterns.md
docs/: CLAUDE-CODE-RESEARCH.md
mcp-configs/: mcp-servers.json
plugins/: blocklist.json  installed_plugins.json  known_marketplaces.json
rules/: coding-style-ts.md  coding-style.md  hooks-ts.md  patterns-ts.md  python-fastapi.md  python-linting.md  python-package-management.md  python-structure.md  python-typing.md  security-ts.md  testing-ts.md
rules/common/: security.md  testing.md
scripts/: claw.js
skills/: create-vm-orb.md
skills/backend-patterns/: SKILL.md
skills/coding-standards/: SKILL.md
skills/security-review/: SKILL.md
skills/tdd-workflow/: SKILL.md
src/everything_claude_code/: __init__.py  cli.py
tests/: test_cli.py
tests/ci/: validators.test.js
tests/lib/: session-aliases.test.js  session-manager.test.js  utils.test.js
tests/scripts/: claw.test.js
